tests/baselines/reference/invalidTryStatements.errors.txt
tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts(9,23): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts(10,23): error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.


==== tests/cases/conformance/statements/tryStatements/invalidTryStatements.ts (2 errors) ====
    function fn() {
        try {
        } catch (x) {
            var x: string; // ensure x is 'Any'
        }
    
        // no type annotation allowed
        try { } catch (z: any) { }
        try { } catch (a: number) { }
                          ~~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
        try { } catch (y: string) { }
                          ~~~~~~
!!! error TS1196: Catch clause variable type annotation must be 'any' or 'unknown' if specified.
    }
    
    